<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.1.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.sample</groupId>
    <artifactId>dockerized-web-app</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>dockerized-web-app</name>
    <description>Simple Spring Boot Application to try out Docker</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jsw.assemble.dir>target/generated-resources/appassembler/jsw</jsw.assemble.dir>
        <wrapper.location>${project.build.directory}/generated-resources/appassembler/jsw/docker-sample-app</wrapper.location>
        <resource.file.location>.</resource.file.location>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>1.8</version>
                            <vendor>openjdk</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.2</version>
                <configuration>
                    <goals>deploy</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/conf</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/*.yml</exclude>
                        <exclude>**/*.txt</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.10</version>
                <executions>
                    <execution>
                        <id>generate-jsw-scripts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>generate-daemons</goal>
                        </goals>
                        <configuration>
                            <repositoryLayout>flat</repositoryLayout>
                            <configurationDirectory>conf</configurationDirectory>
                            <daemons>
                                <daemon>
                                    <id>docker-sample-app</id>
                                    <wrapperMainClass>org.tanukisoftware.wrapper.WrapperSimpleApp</wrapperMainClass>
                                    <mainClass>com.sample.dockerizedwebapp.DockerizedWebAppApplication</mainClass>
                                    <commandLineArguments>
                                        <commandLineArgument>start</commandLineArgument>
                                    </commandLineArguments>
                                    <platforms>
                                        <platform>jsw</platform>
                                    </platforms>
                                    <generatorConfigurations>
                                        <generatorConfiguration>
                                            <generator>jsw</generator>
                                            <configuration>
                                                <property>
                                                    <name>wrapper.java.mainclass</name>
                                                    <value>org.tanukisoftware.wrapper.WrapperSimpleApp</value>
                                                </property>

                                                <property>
                                                    <name>wrapper.app.parameter.1</name>
                                                    <value>com.sample.dockerizedwebapp.DockerizedWebAppApplication</value>
                                                </property>

                                                <property>
                                                    <name>wrapper.java.additional.1</name>
                                                    <value>-XX:MaxDirectMemorySize=256m</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.2</name>
                                                    <value>-Xms128m</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.3</name>
                                                    <value>-Xmx512m</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.4</name>
                                                    <value>-Dreactor.ipc.netty.selectCount=50</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.5</name>
                                                    <value>-Dreactor.ipc.netty.workerCount=100</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.6</name>
                                                    <value>-Xloggc:logs/gclog     </value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.7</name>
                                                    <value>-XX:+PrintGC</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.8</name>
                                                    <value>-XX:+PrintGCTimeStamps</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.9</name>
                                                    <value>-XX:+UseCompressedClassPointers</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.10</name>
                                                    <value>-XX:+UseCompressedOops</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.11</name>
                                                    <value>-XX:+UseG1GC</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.12</name>
                                                    <value>-XX:+UseStringDeduplication</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.13</name>
                                                    <value>-XX:+PrintStringDeduplicationStatistics</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.java.additional.14</name>
                                                    <value>-Dio.netty.allocator.useCacheForAllThreads=false</value>
                                                </property>
                                                <!--<property>-->
                                                <!--<name>wrapper.java.additional.15</name>-->
                                                <!--<value>-Dio.netty.leakDetectionLevel=advanced</value>-->
                                                <!--</property>-->
                                                <!--<property>-->
                                                <!--<name>wrapper.java.additional.16</name>-->
                                                <!--<value>-verbose:gc</value>-->
                                                <!--</property>-->
                                                <!--<property>-->
                                                <!--<name>wrapper.java.additional.17</name>-->
                                                <!--<value>-agentpath:/home/sandarenu/software/jprofiler10/bin/linux-x64/libjprofilerti.so=port=8849,nowait,id=103,config=/home/sandarenu/.jprofiler10/config.xml</value>-->
                                                <!--</property>-->
                                                <property>
                                                    <name>configuration.directory.in.classpath.first</name>
                                                    <value>conf</value>
                                                </property>
                                                <property>
                                                    <name>set.default.REPO_DIR</name>
                                                    <value>lib</value>
                                                </property>
                                                <property>
                                                    <name>wrapper.logfile</name>
                                                    <value>logs/wrapper.log</value>
                                                </property>
                                            </configuration>
                                            <includes>
                                                <include>linux-x86-32</include>
                                                <include>linux-x86-64</include>
                                            </includes>
                                        </generatorConfiguration>
                                    </generatorConfigurations>
                                </daemon>
                            </daemons>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>make-log-dir</id>
                        <phase>package</phase>
                        <configuration>
                            <tasks>
                                <mkdir dir="${wrapper.location}/logs" />
                                <copy todir="${wrapper.location}/conf">
                                    <fileset dir="target/conf" />
                                </copy>
                                <chmod dir="${wrapper.location}/bin" includes="**/*" perm="0755" />
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <descriptor>src/main/assembly/dep.xml</descriptor>
                    <finalName>docker-sample-app</finalName>
                </configuration>
                <executions>
                    <execution>
                        <id>create-archive</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
